--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -23,4 +23,14 @@
     font-size: 2.2rem;
     font-weight: 400;
   }
+
+  .content {
+    position: relative;
+    width: 100%;
+    animation: reveal .4s ease;
+
+    .spinner-spacer {
+      margin-top: 15rem;
+    }
+  }
 }
