--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -29,8 +29,30 @@
     width: 100%;
     animation: reveal .4s ease;
 
-    .spinner-spacer {
-      margin-top: 15rem;
+    .submit-new-btn {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 190px;
+      height: 50px;     
+      margin: 2rem auto 3rem;     
+      font-size: .85rem;
+      border: 1px solid #4c4e5a; 
+      border-radius: 60px;
+      background-color: #fff;    
+      
+      transition: background-color .4s ease;
+      overflow: hidden;        
+      
+      &:disabled {
+        opacity: 0.6 !important;
+        cursor: default;
+      }       
+
+      &:hover {
+        background-color: #f6f8ff; 
+      }
     }
   }
 }
