--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-navbar></app-navbar>
 <app-cart></app-cart>
 <app-product-ratings></app-product-ratings>
-<router-outlet></router-outlet>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<app-footer></app-footer>
