--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,10 @@
+:host {
+  margin-top: auto;
+}
+
 .footer {
   width: 100%;
   min-height: 200px;
+  margin-top: 5rem;
   background-color: #4c4e5a;
 }
