--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,18 +39,12 @@ html, body {
 }
 
 body {
-  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
+  background: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%) no-repeat;
 
   &.active-overlay {
     overflow: hidden;
   }
 }
-
-// main {
-//   width: 100%;
-//   height: calc(100vh - 200px);
-//   padding-bottom: 5rem;
-// }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
