--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -21,7 +21,7 @@
         Write a Review
       </button>
 
-      <rating-graph></rating-graph>
+      <rating-graph [userRating]="userRating"></rating-graph>
 
       <review-section [reviews]="reviews"></review-section>
     </div>
