--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -17,9 +17,7 @@
     </div>
 
     <div *ngIf="!isLoading" class="content">    
-      <button class="submit-new-btn" type="button">
-        Write a Review
-      </button>
+      <button class="submit-new-btn">Write a Review</button>
 
       <rating-graph [userRating]="userRating"></rating-graph>
 
