--- a/src/app/product-ratings/review-section/review-section.component.html
+++ b/src/app/product-ratings/review-section/review-section.component.html
@@ -25,8 +25,10 @@
         <div class="review-body">
           <p [innerHTML]="getReviewBody(review.review)"></p>
 
-          <div *ngIf="isLong(review.review)" class="read-more-btn">
-            <button>
+          <div 
+            *ngIf="isLong(review.review) && !review.expandReview" 
+            class="read-more-btn">
+            <button (click)="review.expandReview = true">
               <span>Read more</span>
               <i class="material-icons">unfold_more</i>
             </button>
