--- a/src/app/product-ratings/review-section/review-section.component.scss
+++ b/src/app/product-ratings/review-section/review-section.component.scss
@@ -78,31 +78,16 @@
               width: fit-content;
               white-space: nowrap;
 
-              &::before {
-                content: '';
-                position: absolute;
-                left: 0;
-                bottom: -2px;
-                transform: scaleX(0);
-                width: 100%;
-                height: 1px;
-                background-color: #2587f7;
-                transition: transform .2s ease;
-              }
-          
-              &:hover::before {
-                transform: scaleX(1);
+              &:hover {
+                span, .material-icons {
+                  color: lighten(#2587f7, 10);
+                }
               }
   
-              span {
-                margin-right: 0.5rem;
-                color: #2587f7;
-                font-size: 0.85rem;
-              }
-  
-              .material-icons {
+              span, .material-icons {
                 color: #2587f7;
                 font-size: 0.9rem;
+                text-shadow: 0 0 6px #ddd;
                 transition: color .4s ease;
               }
             }
