--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -23,6 +23,20 @@
 
       <review-section [reviews]="reviews"></review-section>
     </div>
+
+    <div class="bottom">
+      <div class="pagination-cntrls">
+        <div class="nav-buttons-wrapper">
+          <button class="previous">
+            <i class="material-icons">arrow_left</i>
+          </button>
+
+          <button class="next">
+            <i class="material-icons">arrow_right</i>
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
 
 </aside-panel>
