--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -1,7 +1,7 @@
 .rating-container {
   width: 100%;
   height: 100%;
-  padding: 0 3rem 10rem;
+  padding: 0 3rem 8rem;
   overflow: hidden;
   overflow-y: auto;
   scrollbar-width: none;
@@ -51,6 +51,25 @@
 
       &:hover {
         background-color: #f6f8ff; 
+      }
+    }
+  }
+
+  .bottom {
+    width: 100%;
+    margin-top: 6rem;
+
+    .pagination-cntrls {
+
+      .nav-buttons-wrapper {
+        display: flex;
+        align-items: center;
+        width: fit-content;
+
+        button {
+          padding: 0.2rem 0.5rem;
+          border: thin solid #c7cad8;
+        }
       }
     }
   }
