--- a/src/app/product-ratings/review-section/review-section.component.html
+++ b/src/app/product-ratings/review-section/review-section.component.html
@@ -1,5 +1,5 @@
 <section class="reviews-section">
-  <div *ngFor="let review of altReviews; index as index" 
+  <div *ngFor="let review of reviews; index as index" 
     class="review-card">
     
     <div class="top">
