--- a/src/app/product-ratings/review-section/review-section.component.html
+++ b/src/app/product-ratings/review-section/review-section.component.html
@@ -55,4 +55,16 @@
       </div>      
     </div>
   </div>
+
+  <div class="pagination-cntrls">
+    <div class="nav-buttons-wrapper">
+      <button class="previous">
+        <i class="material-icons">arrow_left</i>
+      </button>
+
+      <button class="next">
+        <i class="material-icons">arrow_right</i>
+      </button>
+    </div>
+  </div>
 </section>
