--- a/src/app/product-ratings/review-section/review-section.component.scss
+++ b/src/app/product-ratings/review-section/review-section.component.scss
@@ -137,4 +137,20 @@
       }
     }
   }
+
+  .pagination-cntrls {
+    width: 100%;
+    margin-top: 6rem;
+
+    .nav-buttons-wrapper {
+      display: flex;
+      align-items: center;
+      width: fit-content;
+
+      button {
+        padding: 0.2rem 0.5rem;
+        border: thin solid #c7cad8;
+      }
+    }
+  }
 }
