--- a/src/app/product-ratings/review-section/review-section.component.scss
+++ b/src/app/product-ratings/review-section/review-section.component.scss
@@ -148,8 +148,10 @@
       width: fit-content;
 
       button {
+        margin-right: 0.1rem;
         padding: 0.2rem 0.5rem;
         border: thin solid #c7cad8;
+        
       }
     }
   }
