--- a/src/app/product-ratings/review-section/review-section.component.html
+++ b/src/app/product-ratings/review-section/review-section.component.html
@@ -1,4 +1,4 @@
-<section #reviewSection class="reviews-section">
+<section class="reviews-section">
   <div *ngFor="let review of altReviews; index as index" 
     class="review-card">
     
