--- a/src/app/product-ratings/review-section/review-section.component.html
+++ b/src/app/product-ratings/review-section/review-section.component.html
@@ -1,5 +1,5 @@
 <section class="reviews-section">
-  <div *ngFor="let review of altReviews; index as index" 
+  <div *ngFor="let review of reviews; index as index" 
     class="review-card">
     
     <div class="top">
@@ -53,22 +53,6 @@
         </button>
         <span class="count">{{ review.dislikes | number }}</span>
       </div>      
-    </div>
-  </div>
-
-  <div class="pagination-cntrls">
-    <div class="nav-buttons-wrapper">
-      <button 
-        (click)="onPageChange('previous')"
-        class="previous">
-        <i class="material-icons">arrow_left</i>
-      </button>
-
-      <button 
-        (click)="onPageChange('next')"
-        class="next">
-        <i class="material-icons">arrow_right</i>
-      </button>
     </div>
   </div>
 </section>
