--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -23,6 +23,12 @@
 
       <review-section [reviews]="reviews"></review-section>
     </div>
+
+    <div class="bottom">
+      <pagination-cntrls
+        [totalReviews]="rating.totalReviews"
+        [itemPerPage]="rowcount"></pagination-cntrls>
+    </div>
   </div>
 
 </aside-panel>
