--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -1,9 +1,8 @@
 <aside-panel [showPanel]="viewRatings" (showPanel)="viewRatings = $event">
 
-  <div class="rating-container">
+  <div #container class="rating-container">
     <div class="top">
       <h3 class="title">Rating & Reviews</h3>
-     
       <p class="rating">{{ rating.overall | number:'1.1-1' }}</p>
 
       <star-rating 
@@ -16,21 +15,23 @@
       <app-spinner [loading]="isLoading"></app-spinner>
     </div>
 
-    <div *ngIf="!isLoading" class="content">    
-      <button class="submit-new-btn">Write a Review</button>
-
-      <rating-graph [userRating]="userRating"></rating-graph>
-
-      <div [class.reloading]="reloading">
-        <review-section [reviews]="reviews"></review-section>
+    <div *ngIf="!isLoading">
+      <div class="content">    
+        <button class="submit-new-btn">Write a Review</button>
+  
+        <rating-graph [userRating]="userRating"></rating-graph>
+  
+        <div [class.reloading]="reloading">
+          <review-section [reviews]="reviews"></review-section>
+        </div>
       </div>
-    </div>
-
-    <div *ngIf="!isLoading || reloading" class="bottom">
-      <pagination-cntrls
-        [totalReviews]="rating.totalReviews"
-        [itemPerPage]="rowcount"
-        (currentPage)="onReviewsPageChange($event)"></pagination-cntrls>
+  
+      <div class="bottom">
+        <pagination-cntrls
+          [totalReviews]="rating.totalReviews"
+          [itemPerPage]="rowcount"
+          (currentPage)="onReviewsPageChange($event)"></pagination-cntrls>
+      </div>
     </div>
   </div>
 
