--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -29,7 +29,7 @@
         <pagination-cntrls
           [totalReviews]="rating.totalReviews"
           [itemPerPage]="rowcount"
-          (currentPage)="onReviewsPageChange($event)"></pagination-cntrls>
+          (currentPage)="onReviewPageChange($event)"></pagination-cntrls>
       </div>
     </div>
   </div>
