--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -112,7 +112,7 @@
 
         .buy-now-btn {
           margin-right: 1rem;          
-          border: 1px solid #4c4e5a; 
+          border: 1px solid #c7cad8; 
           background-color: #fff;            
 
           &:hover {
