--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -25,12 +25,19 @@
         </div>
       </div>
   
-      <div class="bottom">
+      <!-- <div class="bottom">
         <pagination-cntrls
           [totalReviews]="rating.totalReviews"
           [itemPerPage]="rowcount"
           (currentPage)="onReviewPageChange($event)"></pagination-cntrls>
-      </div>
+      </div> -->
+    </div>
+
+    <div class="bottom">
+      <pagination-cntrls
+        [totalReviews]="rating.totalReviews"
+        [itemPerPage]="rowcount"
+        (currentPage)="onReviewPageChange($event)"></pagination-cntrls>
     </div>
   </div>
 </aside-panel>
