--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -43,7 +43,7 @@
       height: 50px;     
       margin: 2rem auto 3rem;     
       font-size: .85rem;
-      border: 1px solid #4c4e5a; 
+      border: 1px solid #c7cad8; 
       border-radius: 60px;
       background-color: #fff;          
       transition: background-color .4s ease;
