--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -39,9 +39,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 190px;
+      width: 70%;
       height: 50px;     
-      margin: 2rem auto 3rem;     
+      margin: 3rem auto 3rem;     
       font-size: .85rem;
       border: 1px solid #c7cad8; 
       border-radius: 60px;
