--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -1,4 +1,6 @@
 .rating-container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   padding: 0 3rem 7rem;
@@ -58,5 +60,9 @@
         background-color: #f6f8ff; 
       }
     }
+  }
+
+  .bottom {
+    margin-top: auto;
   }
 }
