--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -1,5 +1,9 @@
 <aside-panel [showPanel]="viewRatings" (showPanel)="viewRatings = $event">
   <div #container class="rating-container">
+    <div *ngIf="isLoading" class="spinner-spacer">
+      <app-spinner [loading]="isLoading"></app-spinner>
+    </div>
+
     <div class="top">
       <h3 class="title">Rating & Reviews</h3>
       <p class="rating">{{ rating.overall | number:'1.1-1' }}</p>
@@ -10,30 +14,17 @@
         [totalReviews]="rating.totalReviews"></star-rating>
     </div>
 
-    <div *ngIf="isLoading" class="spinner-spacer">
-      <app-spinner [loading]="isLoading"></app-spinner>
-    </div>
+    <div *ngIf="!isLoading && rating.totalReviews" class="content">    
+      <button class="submit-new-btn">Write a Review</button>
 
-    <div *ngIf="!isLoading">
-      <div class="content">    
-        <button class="submit-new-btn">Write a Review</button>
-  
-        <rating-graph [userRating]="userRating"></rating-graph>
-  
-        <div [class.reloading]="reloading">
-          <review-section [reviews]="reviews"></review-section>
-        </div>
+      <rating-graph [userRating]="userRating"></rating-graph>
+
+      <div [class.reloading]="reloading">
+        <review-section [reviews]="reviews"></review-section>
       </div>
-  
-      <!-- <div class="bottom">
-        <pagination-cntrls
-          [totalReviews]="rating.totalReviews"
-          [itemPerPage]="rowcount"
-          (currentPage)="onReviewPageChange($event)"></pagination-cntrls>
-      </div> -->
     </div>
 
-    <div class="bottom">
+    <div *ngIf="!isLoading && rating.totalReviews" class="bottom">
       <pagination-cntrls
         [totalReviews]="rating.totalReviews"
         [itemPerPage]="rowcount"
