--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -19,7 +19,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding: 0 1.5rem;
+    padding: 0 3rem;
     padding-bottom: 70px;
     animation: reveal 0.4s ease;
 
@@ -156,7 +156,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 1.5rem;
+    padding: 1.5rem 2rem;
     border-top: thin solid #e7edff;
     background-color: #fff;
 
