--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,7 +1,7 @@
 <app-spinner [loading]="isLoading" overlayStyle="fixed"></app-spinner>
 
-<section  class="product-detail-section">
-  <div class="wrapper">
+<section class="product-detail-section">
+  <div class="wrapper-l">
     <div class="banner"></div>
 
     <div 
