--- a/src/app/product-details/slider/slider.component.scss
+++ b/src/app/product-details/slider/slider.component.scss
@@ -32,10 +32,16 @@
   }
 
   .preview-l {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
     width: 100%;
-    height: 600px;
-    overflow: hidden;
-    cursor: zoom-in;
+
+    img {
+      display: block;
+      min-height: 100%;
+    }
   }
 
   .preview-s {
