--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,8 +1,10 @@
 <main>
-  <div class="wrapper">
-    <a routerLink="./product-list">Product list</a>
-    <span> | </span>
-    <a routerLink="./product-creation">Add new product</a>
+  <div class="wrapper-l">
+    <nav class="navbar">
+      <a routerLink="./product-list">Product list</a>
+      <span> | </span>
+      <a routerLink="./product-creation">Add new product</a>
+    </nav>
     
     <router-outlet></router-outlet>
   </div>
