--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -103,7 +103,7 @@
     transition: background-color 0.3s ease;
 
     &:hover {
-      background-color: darken(#e3e6ec, 1);
+      background-color: #e6e9f0;
     }
     
     .material-icons {
