--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <div class="wrapper navbar-wrapper">
+  <div class="wrapper-l navbar-wrapper">
     <a routerLink="/" class="logo">
       <span>A</span>
       <span>rmazon</span>
