--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -52,7 +52,8 @@
       }
 
       .material-icons {
-        color: #7a8196;
+        // color: #7a8196;
+        color: #4c4e5a;
         font-size: 1.4rem;
         transition: color .4s ease;
       }
