--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -118,7 +118,7 @@
           background-color: #fff;            
 
           &:hover {
-            background-color: #f6f8ff; 
+            background-color: #e6e9f0; 
           }
         }
 
