--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -1,4 +1,10 @@
 main {
   margin: 2rem 0;
   padding: 70px 1rem 0;
+
+  .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
