--- a/src/app/product-details/quantity-selector/quantity-selector.component.scss
+++ b/src/app/product-details/quantity-selector/quantity-selector.component.scss
@@ -9,7 +9,6 @@
     padding: 0.5rem 0.7rem;
 
     .material-icons {
-      color: #4c4e5a;
       font-size: 0.95rem;
     }
   }
@@ -21,8 +20,8 @@
     font-size: .85rem;
     text-align: center;
     white-space: nowrap;
-    border-radius: 4px;
-    background-color: #f0f4ff;
+    border-radius: 100px;
+    background-color: #e6e9f0;
     overflow: hidden;
     user-select: none;
   }
