--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 0 3rem 7rem;
+  padding: 1rem 3rem 7rem;
   overflow: hidden;
   overflow-y: auto;
   scrollbar-width: none;
@@ -57,12 +57,13 @@
       }       
 
       &:hover {
-        background-color: #f6f8ff; 
+        background-color: #e6e9f0; 
       }
     }
   }
 
   .bottom {
     margin-top: auto;
+    user-select: none;
   }
 }
