--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,9 +1,8 @@
 <main>
   <div class="wrapper-l">
     <nav class="navbar">
-      <a routerLink="./product-list">Product list</a>
-      <span> | </span>
-      <a routerLink="./product-creation">Add new product</a>
+      <a routerLink="./product-list" class="navbar-link">Product list</a>
+      <a routerLink="./product-creation" class="navbar-link">Add new product</a>
     </nav>
     
     <router-outlet></router-outlet>
