--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <section class="products-section">
-  <div class="wrapper">
+  <div class="wrapper-l">
     <div class="banner">
       <div class="banner-text">
         <h3>We're here with you!</h3>
