--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="wrapper-l">
+  <div class="wrapper">
     <nav class="navbar">
       <a routerLink="./product-list" class="navbar-link">Product list</a>
       <a routerLink="./product-creation" class="navbar-link">Add new product</a>
