--- a/src/app/product-details/slider/slider.component.html
+++ b/src/app/product-details/slider/slider.component.html
@@ -1,7 +1,7 @@
 <div class="product-images" >
   <!-- Large screen -->
   <div class="preview-l">
-    <div *ngFor="let preview of images.slice(0, 4)" class="item">
+    <div *ngFor="let preview of images.slice(0, 4)" class="preview">
       <img 
         image-loader
         [src]="preview" 
