--- a/src/app/product-details/slider/slider.component.scss
+++ b/src/app/product-details/slider/slider.component.scss
@@ -33,10 +33,12 @@
 
   .preview-l {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 1.5rem;
     width: 100%;
+    overflow: hidden;
 
     img {
       display: block;
