--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -12,7 +12,12 @@
     }
     
     h3 {
+      margin-bottom: 0.6rem;
+    }
+
+    p {
       margin-bottom: 1rem;
+      font-size: .85rem;
     }
 
     .option-flex {
