--- a/src/app/product-details/slider/slider.component.scss
+++ b/src/app/product-details/slider/slider.component.scss
@@ -39,7 +39,8 @@
     overflow: hidden;
 
     .preview {
-      height: 484px;
+      height: auto;
+      transition: width .1s ease, height .1s ease;
 
       img {
         display: block;
