--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -25,7 +25,7 @@
       .product-image {
         display: block;
         width: 100%;
-        height: 250px;
+        height: 200px;
         background-color: #fff;
 
         img {
@@ -62,14 +62,15 @@
         }
 
         .price {
-          margin-bottom: 0.5rem;
+          margin-bottom: 1rem;
           font-size: 0.95rem;
           font-weight: 600;
         }
 
         .stock-label {
-          margin-bottom: 0.5rem;
+          margin-bottom: 1rem;
           color: #4da861;
+          font-size: .80rem;
         }
       }
 
