--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -97,21 +97,17 @@
         margin-bottom: 4rem;
 
         button {
-          position: relative;
-          display: flex;
           justify-content: center;
-          align-items: center;
+          position: relative;
           width: 190px;
-          height: 50px;          
-
+          height: 50px;         
           font-size: .85rem;
           border-radius: 60px;
-          
           transition: background-color .4s ease;
           overflow: hidden;        
           
           &:disabled {
-            opacity: 0.6 !important;
+            opacity: 0.6;
             cursor: default;
           }
         }
