--- a/src/app/product-details/slider/slider.component.scss
+++ b/src/app/product-details/slider/slider.component.scss
@@ -41,6 +41,7 @@
 
     .preview {
       height: 484px;
+      cursor: pointer;
       // transition: width .2s ease, height .2s ease;
 
       img {
